Fixed vertical spacing (removed superfluous white space below footer)

--- a/src/main/webapp/css/vcr.scss
+++ b/src/main/webapp/css/vcr.scss
@@ -87,8 +87,10 @@ div.navbar div.container {
 
 #content {
     min-height: 100%;
-    margin-bottom: -211px;
-    padding-bottom: 221px; /* compensate margin and add an extra 10px */
+    margin-bottom: -139px;
+    padding-bottom: 160px; 
+    margin-top: -72px;
+    padding-top: 72px;
 }
 
 .hidden-overflow {
